added sl4j dependency

--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,25 @@
   <artifactId>sandbox</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
+  
+  <dependencies>
+    <dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-api</artifactId>
+	    <version>1.7.7</version>
+	</dependency>
+    <dependency>
+	    <groupId>ch.qos.logback</groupId>
+	    <artifactId>logback-classic</artifactId>
+	    <version>1.1.2</version>
+	</dependency>
+    <dependency>
+     <groupId>ch.qos.logback</groupId>
+     <artifactId>logback-core</artifactId>
+     <version>1.1.3</version>
+  	</dependency>
+  </dependencies>
+  
   <build>
         <plugins>
             <plugin>
@@ -15,7 +34,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>sandbox.RecursionApp</mainClass>
+                            <mainClass>sandbox.SandboxRunner</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
