--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
      <artifactId>logback-core</artifactId>
      <version>1.1.3</version>
   	</dependency>
+   <dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.12</version>
+	</dependency>
   </dependencies>
   
   <build>
