--- a/.classpath
+++ b/.classpath
@@ -27,5 +27,12 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Users/tcelikel/Desktop/Selenium/lib/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="/Users/tcelikel/Desktop/Selenium/lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="/Users/tcelikel/Desktop/Selenium/lib/guava-21.0.jar"/>
+	<classpathentry kind="lib" path="/Users/tcelikel/Desktop/Selenium/lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="/Users/tcelikel/Desktop/Selenium/lib/httpclient-4.5.3.jar"/>
+	<classpathentry kind="lib" path="/Users/tcelikel/Desktop/Selenium/lib/httpcore-4.4.6.jar"/>
+	<classpathentry kind="lib" path="/Users/tcelikel/Desktop/Selenium/selenium-server-standalone-3.4.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
