--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,12 @@
    <dependency>
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
-		<version>4.12</version>
+		<version>4.9</version>
+	</dependency>
+   <dependency>
+		<groupId>org.seleniumhq.selenium</groupId>
+		<artifactId>selenium-java</artifactId>
+		<version>3.4.0</version>
 	</dependency>
   </dependencies>
   
